# Mini_MDFT

./: .gitignore  CMakeLists.txt
data/dcf/spce-h/: spce-h-ck_nonzero_nmax2_ml
input/: dft.in  solute.in
src/: energy_minimization.f90  main.f90  module_density.f90  module_energy_and_gradient.f90  module_energy_cproj_mrso.f90  module_init_simu.f90  module_solvent.f90  module_wigner_d.f90
